<resources>
    <string name="app_name">AmbiChat</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="to_change_number_email_click_here">To change number/email click here</string>
    <string name="submit">Submit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_or_phone_number">Enter your Email or Phone number</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="signup">Signup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aman_shakya">Aman Shakya</string>
    <string name="select_image">Select Image</string>
</resources>